--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "websocket-extensions": "^0.1.4",
     "yarn": "^1.22.4"
   },
   "scripts": {
