--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-ga": "^3.0.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "websocket-extensions": "^0.1.4",
+    "yarn": "^1.22.4"
   },
   "scripts": {
     "start": "react-scripts start",
