--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/preset-react": "^7.18.6",
     "@babel/runtime": "^7.21.5",
     "@material-ui/core": "^4.12.4",
     "@testing-library/jest-dom": "^4.2.4",
